--- a/css/main.scss
+++ b/css/main.scss
@@ -159,6 +159,10 @@ body {
     align-items: center;
     padding: 1em 2em;
 
+    .logo {
+      height: 40px;
+    }
+
     //mobile nav burger
     .burger {
       width: 35px;
@@ -167,7 +171,7 @@ body {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      z-index: 2;
+      z-index: 5;
 
       .bar {
         width: 100%;
@@ -215,7 +219,7 @@ body {
       border-radius: 50%;
       right: 45px;
 
-      z-index: 1;
+      z-index: 4;
 
       &.open {
         width: 350px;
@@ -230,21 +234,119 @@ body {
       position: absolute;
       right: 50px;
       top: 70px;
-      z-index: 2;
+      z-index: 5;
       transition: 0.3s ease;
 
       .nav-item {
         margin: 1em 0;
         color: $textPrimary;
+        cursor: pointer;
       }
 
       &.open {
         display: flex;
       }
     }
+  }
 
-    //once the screen gets bigger
-    @media screen and (min-width: 600px) {
+  //hero content
+  .hero-content-wrapper {
+    height: 90%;
+    display: grid;
+    place-items: center;
+    position: relative;
+    z-index: 3;
+
+    .logo-bg {
+      position: absolute;
+      z-index: -1;
+      height: 500px;
+      top: 20px;
+      left: 50px;
+      opacity: 0.03;
+    }
+
+    .name-wrapper {
+      margin-top: -10em;
+      text-align: center;
+      .name {
+        font-size: 2.8em;
+        margin-bottom: 0.5em;
+        background-color: #f3ec78;
+        background-image: linear-gradient(45deg, $green, $blue);
+        background-size: 100%;
+        -webkit-background-clip: text;
+        -moz-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        -moz-text-fill-color: transparent;
+      }
+
+      .title {
+        color: $textPrimary;
+        font-weight: 300;
+      }
+    }
+
+    .social-wrapper {
+      display: none;
+    }
+  }
+
+  //abstract shapes
+  .circle-bg {
+    position: absolute;
+    top: -50px;
+    right: -80px;
+    height: 230px;
+  }
+
+  .circle-sm {
+    position: absolute;
+    bottom: 300px;
+    right: 50px;
+    height: 40px;
+  }
+
+  .square-sm {
+    position: absolute;
+    top: 200px;
+    left: 170px;
+    height: 40px;
+  }
+
+  .dots-left {
+    position: absolute;
+    left: -40px;
+    z-index: -1;
+    top: 0;
+    height: 200px;
+  }
+
+  .dots-right {
+    position: absolute;
+    right: -20px;
+
+    bottom: 0;
+    height: 200px;
+  }
+
+  .triangle-sm {
+    position: absolute;
+    top: 450px;
+    left: 30px;
+    height: 70px;
+  }
+
+  .square-bg {
+    position: absolute;
+    bottom: -70px;
+    left: -130px;
+    height: 270px;
+  }
+
+  //once the screen gets bigger
+  @media screen and (min-width: 600px) {
+    .nav-wrapper {
       padding: 1em 7em;
 
       .burger {
@@ -264,9 +366,99 @@ body {
         display: none;
       }
     }
+
+    .hero-content-wrapper {
+      .social-wrapper {
+        padding: 0 2em 0 0;
+        display: flex;
+        flex-direction: column;
+        margin-top: -10em;
+        .social-icon {
+          height: 40px;
+          margin: 1em 0;
+          transition: 0.3s ease;
+          cursor: pointer;
+        }
+      }
+
+      grid-auto-flow: column;
+      justify-content: space-between;
+      .logo-bg {
+        height: 700px;
+        left: 200px;
+      }
+
+      .name-wrapper {
+        margin-top: -10em;
+        margin-left: 10em;
+        text-align: left;
+
+        .name {
+          font-size: 5em;
+          margin-bottom: 0.5em;
+        }
+
+        .title {
+          color: $textPrimary;
+          font-weight: 300;
+        }
+      }
+    }
+    .square-bg {
+      bottom: -240px;
+      left: -30px;
+      height: 400px;
+    }
+
+    .circle-bg {
+      top: -150px;
+      right: -150px;
+      height: 400px;
+    }
+
+    .dots-left {
+      left: -10px;
+      z-index: -1;
+      top: -30px;
+      height: 300px;
+    }
+
+    .dots-right {
+      right: -10px;
+      bottom: 0;
+      height: 300px;
+    }
+
+    .triangle-sm {
+      top: 650px;
+      left: 500px;
+      height: 70px;
+    }
+
+    .circle-sm {
+      bottom: 400px;
+      right: 250px;
+      height: 40px;
+    }
+
+    .square-sm {
+      left: 570px;
+    }
   }
 
-  img {
-    height: 30px;
+  @media screen and (min-width: 1400px) {
+    .nav-wrapper {
+      padding: 1em 7em 1em 10em;
+    }
+
+    .hero-content-wrapper {
+      .name-wrapper {
+        margin-left: 20em;
+      }
+
+      .logo-bg {
+        left: 800px;
+      }
+    }
   }
 }
