--- a/css/main.css
+++ b/css/main.css
@@ -137,9 +137,12 @@ body {
   background-color: #2d2d31;
 }
 
+.wrapper {
+  overflow-x: hidden;
+}
+
 .hero {
   position: relative;
-  overflow-x: hidden;
   height: 100vh;
 }
 
@@ -277,6 +280,7 @@ body {
 .hero .hero-content-wrapper .name-wrapper {
   margin-top: -10em;
   text-align: center;
+  letter-spacing: 2px;
 }
 
 .hero .hero-content-wrapper .name-wrapper .name {
@@ -305,6 +309,7 @@ body {
   top: -83px;
   right: -96px;
   height: 230px;
+  opacity: 0.8;
 }
 
 .hero .circle-sm {
@@ -324,6 +329,7 @@ body {
 .hero .dots-left {
   position: absolute;
   left: -40px;
+  opacity: 0.8;
   z-index: -1;
   top: 0;
   height: 200px;
@@ -332,6 +338,7 @@ body {
 .hero .dots-right {
   position: absolute;
   right: -20px;
+  opacity: 0.8;
   bottom: 0;
   height: 200px;
 }
@@ -345,9 +352,10 @@ body {
 
 .hero .square-bg {
   position: absolute;
-  bottom: -70px;
+  bottom: -100px;
   left: -130px;
   height: 270px;
+  opacity: 0.8;
 }
 
 @media screen and (min-width: 600px) {
@@ -401,6 +409,7 @@ body {
     margin-top: -10em;
     margin-left: 10em;
     text-align: left;
+    letter-spacing: 10px;
   }
   .hero .hero-content-wrapper .name-wrapper .name {
     font-size: 5em;
@@ -455,6 +464,94 @@ body {
   }
   .hero .hero-content-wrapper .logo-bg {
     left: 800px;
+  }
+}
+
+.about {
+  min-height: 500px;
+  margin: 275px 0px;
+  font-size: 16px;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+.about .about-heading {
+  text-align: center;
+  text-transform: uppercase;
+  line-height: 0;
+  margin-bottom: 10em;
+}
+
+.about .about-heading h1 {
+  font-size: 6em;
+  opacity: 0.3;
+  color: rgba(255, 255, 255, 0.2);
+}
+
+.about .about-heading h6 {
+  font-size: 2em;
+  font-weight: 300;
+  color: #84fab0;
+}
+
+.about .about-content {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-rows: min-content min-content;
+      grid-template-rows: -webkit-min-content -webkit-min-content;
+      grid-template-rows: min-content min-content;
+  justify-items: center;
+  grid-auto-flow: dense;
+  gap: 50px;
+  width: 80%;
+  padding: 30px;
+  background: linear-gradient(255.29deg, rgba(64, 64, 68, 0.8) 3.51%, rgba(64, 64, 68, 0.8) 3.52%, rgba(64, 64, 68, 0.76) 104.9%);
+  border: 2px solid #404044;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.about .about-content :first-child {
+  -ms-grid-row: 2;
+  grid-row: 2;
+}
+
+.about .about-content .text {
+  line-height: 40px;
+  color: #ffffff;
+  font-weight: 300;
+}
+
+.about .about-content .circle {
+  height: 250px;
+}
+
+@media screen and (min-width: 600px) {
+  .about {
+    font-size: 20px;
+  }
+  .about .circle {
+    height: 300px !important;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .about .about-content {
+    -ms-grid-columns: 2fr 1fr;
+        grid-template-columns: 2fr 1fr;
+    -ms-grid-rows: 0px;
+        grid-template-rows: 0px;
+    grid-row-gap: 0px;
+    width: 60%;
+  }
+  .about .about-content .circle {
+    -ms-grid-row: 2;
+    grid-row: 2;
   }
 }
 /*# sourceMappingURL=main.css.map */
