--- a/css/main.scss
+++ b/css/main.scss
@@ -147,12 +147,13 @@ body {
   background-color: $backgroundColor;
 }
 
+.wrapper {
+  overflow-x: hidden;
+}
 //hero section
 .hero {
   position: relative;
-  overflow-x: hidden;
   height: 100vh;
-
   .nav-wrapper {
     display: flex;
     justify-content: space-between;
@@ -265,6 +266,7 @@ body {
     .name-wrapper {
       margin-top: -10em;
       text-align: center;
+      letter-spacing: 2px;
       .name {
         font-size: 2.8em;
         margin-bottom: 0.5em;
@@ -294,6 +296,7 @@ body {
     top: -83px;
     right: -96px;
     height: 230px;
+    opacity: 0.8;
   }
 
   .circle-sm {
@@ -313,6 +316,7 @@ body {
   .dots-left {
     position: absolute;
     left: -40px;
+    opacity: 0.8;
     z-index: -1;
     top: 0;
     height: 200px;
@@ -321,7 +325,7 @@ body {
   .dots-right {
     position: absolute;
     right: -20px;
-
+    opacity: 0.8;
     bottom: 0;
     height: 200px;
   }
@@ -335,9 +339,10 @@ body {
 
   .square-bg {
     position: absolute;
-    bottom: -70px;
+    bottom: -100px;
     left: -130px;
     height: 270px;
+    opacity: 0.8;
   }
 
   //once the screen gets bigger
@@ -388,6 +393,7 @@ body {
         margin-top: -10em;
         margin-left: 10em;
         text-align: left;
+        letter-spacing: 10px;
 
         .name {
           font-size: 5em;
@@ -442,6 +448,7 @@ body {
     }
   }
 
+  //max size
   @media screen and (min-width: 1400px) {
     .nav-wrapper {
       padding: 1em 7em 1em 10em;
@@ -454,6 +461,87 @@ body {
 
       .logo-bg {
         left: 800px;
+      }
+    }
+  }
+}
+
+//about section
+.about {
+  min-height: 500px;
+  margin: 275px 0px;
+  font-size: 16px;
+
+  display: grid;
+  place-items: center;
+
+  .about-heading {
+    text-align: center;
+    text-transform: uppercase;
+    line-height: 0;
+    margin-bottom: 10em;
+
+    h1 {
+      font-size: 6em;
+      opacity: 0.3;
+      color: $textFaded;
+    }
+
+    h6 {
+      font-size: 2em;
+      font-weight: 300;
+      color: $green;
+    }
+  }
+
+  .about-content {
+    display: grid;
+    grid-template-rows: min-content min-content;
+    justify-items: center;
+    grid-auto-flow: dense;
+    gap: 50px;
+    width: 80%;
+    padding: 30px;
+    background: linear-gradient(
+      255.29deg,
+      rgba(64, 64, 68, 0.8) 3.51%,
+      rgba(64, 64, 68, 0.8) 3.52%,
+      rgba(64, 64, 68, 0.76) 104.9%
+    );
+    border: 2px solid #404044;
+    box-sizing: border-box;
+    border-radius: 10px;
+    align-items: center;
+
+    :first-child {
+      grid-row: 2;
+    }
+
+    .text {
+      line-height: 40px;
+      color: $textPrimary;
+      font-weight: 300;
+    }
+
+    .circle {
+      height: 250px;
+    }
+  }
+
+  @media screen and (min-width: 600px) {
+    font-size: 20px;
+    .circle {
+      height: 300px !important;
+    }
+  }
+  @media screen and (min-width: 1080px) {
+    .about-content {
+      grid-template-columns: 2fr 1fr;
+      grid-template-rows: 0px;
+      grid-row-gap: 0px;
+      width: 60%;
+      .circle {
+        grid-row: 2;
       }
     }
   }
