--- a/css/main.css
+++ b/css/main.css
@@ -309,7 +309,6 @@ body {
   top: -83px;
   right: -96px;
   height: 230px;
-  opacity: 0.8;
 }
 
 .hero .circle-sm {
@@ -329,7 +328,6 @@ body {
 .hero .dots-left {
   position: absolute;
   left: -40px;
-  opacity: 0.8;
   z-index: -1;
   top: 0;
   height: 200px;
@@ -338,7 +336,6 @@ body {
 .hero .dots-right {
   position: absolute;
   right: -20px;
-  opacity: 0.8;
   bottom: 0;
   height: 200px;
 }
@@ -355,7 +352,6 @@ body {
   bottom: -100px;
   left: -130px;
   height: 270px;
-  opacity: 0.8;
 }
 
 @media screen and (min-width: 600px) {
@@ -439,6 +435,8 @@ body {
     right: -10px;
     bottom: 0;
     height: 300px;
+    -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
+            filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
   }
   .hero .triangle-sm {
     top: 650px;
@@ -467,32 +465,65 @@ body {
   }
 }
 
-.about {
-  min-height: 500px;
-  margin: 275px 0px;
-  font-size: 16px;
-  display: -ms-grid;
-  display: grid;
-  place-items: center;
-}
-
-.about .about-heading {
+.section-heading {
   text-align: center;
   text-transform: uppercase;
   line-height: 0;
   margin-bottom: 10em;
 }
 
-.about .about-heading h1 {
+.section-heading h1 {
   font-size: 6em;
   opacity: 0.3;
   color: rgba(255, 255, 255, 0.2);
 }
 
-.about .about-heading h6 {
+.section-heading h6 {
   font-size: 2em;
   font-weight: 300;
   color: #84fab0;
+}
+
+.section-spacing {
+  min-height: 500px;
+  margin: 300px 0px;
+  font-size: 16px;
+  display: -ms-grid;
+  display: grid;
+  justify-items: center;
+}
+
+@media screen and (min-width: 600px) {
+  .section-spacing {
+    font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 1080px) {
+  .section-spacing {
+    margin: 375px 0px;
+  }
+}
+
+.section-content {
+  padding: 30px;
+  background: linear-gradient(255.29deg, rgba(64, 64, 68, 0.8) 3.51%, rgba(64, 64, 68, 0.8) 3.52%, rgba(64, 64, 68, 0.76) 104.9%);
+  border: 2px solid #404044;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-radius: 10px;
+}
+
+@media screen and (min-width: 1080px) {
+  .section-content {
+    width: 73% !important;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .section-content {
+    width: 60% !important;
+  }
 }
 
 .about .about-content {
@@ -504,13 +535,7 @@ body {
   justify-items: center;
   grid-auto-flow: dense;
   gap: 50px;
-  width: 80%;
-  padding: 30px;
-  background: linear-gradient(255.29deg, rgba(64, 64, 68, 0.8) 3.51%, rgba(64, 64, 68, 0.8) 3.52%, rgba(64, 64, 68, 0.76) 104.9%);
-  border: 2px solid #404044;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  border-radius: 10px;
+  width: 90%;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -525,6 +550,7 @@ body {
   line-height: 40px;
   color: #ffffff;
   font-weight: 300;
+  text-align: center;
 }
 
 .about .about-content .circle {
@@ -532,9 +558,6 @@ body {
 }
 
 @media screen and (min-width: 600px) {
-  .about {
-    font-size: 20px;
-  }
   .about .circle {
     height: 300px !important;
   }
@@ -547,11 +570,132 @@ body {
     -ms-grid-rows: 0px;
         grid-template-rows: 0px;
     grid-row-gap: 0px;
-    width: 60%;
   }
   .about .about-content .circle {
     -ms-grid-row: 2;
     grid-row: 2;
+  }
+  .about .about-content .text {
+    text-align: left;
+  }
+}
+
+.skills {
+  position: relative;
+  z-index: 20;
+}
+
+.skills .skills-dots {
+  position: absolute;
+  z-index: -4;
+  height: 350px;
+}
+
+.skills .skills-dots:nth-child(1) {
+  top: -20px;
+  right: -102px;
+  -webkit-filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
+          filter: invert(92%) sepia(9%) saturate(1373%) hue-rotate(48deg) brightness(100%) contrast(96%);
+}
+
+.skills .skills-dots:nth-child(2) {
+  bottom: -200px;
+  left: -102px;
+  -webkit-filter: invert(92%) sepia(9%) saturate(1411%) hue-rotate(79deg) brightness(100%) contrast(96%);
+          filter: invert(92%) sepia(9%) saturate(1411%) hue-rotate(79deg) brightness(100%) contrast(96%);
+}
+
+.skills .skills-title {
+  color: #bb86fc;
+}
+
+.skills .skills-content {
+  width: 90%;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(130px, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(130px, 1fr));
+  justify-items: center;
+  gap: 11px;
+}
+
+.skills .skill-card {
+  display: -ms-grid;
+  display: grid;
+  gap: 20px;
+  justify-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0 20px;
+  color: #fff;
+  margin-bottom: 40px;
+}
+
+.skills .skill-card .skill-card-icon-container {
+  text-align: center;
+  width: 100px;
+  height: 100px;
+  border: 2px solid white;
+  border-radius: 50%;
+  padding: 10px;
+  -webkit-box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0 15px 10px 3px rgba(0, 0, 0, 0.2);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #2d2d31;
+  background: linear-gradient(230.32deg, rgba(255, 255, 255, 0.245) 7.47%, rgba(255, 255, 255, 0.07) 110.81%);
+}
+
+.skills .skill-card .skill-card-icon-container img {
+  width: 80%;
+}
+
+.skills .skill-card .skill-card-icon-container .figma-img {
+  width: 55%;
+}
+
+.skills .skill-card .skill-card-icon-container .smaller-img {
+  width: 70%;
+}
+
+@media screen and (min-width: 1080px) {
+  .skills .skills-content {
+    -ms-grid-columns: (minmax(137px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(137px, 1fr));
+  }
+  .skills .skills-dots:nth-child(1) {
+    top: -20px;
+    right: 30px;
+  }
+  .skills .skills-dots:nth-child(2) {
+    bottom: -200px;
+    left: 30px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .skills .skills-content {
+    -ms-grid-columns: (minmax(250px, 1fr))[auto-fit];
+        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  }
+  .skills .skills-dots {
+    height: 400px;
+  }
+  .skills .skills-dots:nth-child(1) {
+    top: -20px;
+    right: 280px;
+  }
+  .skills .skills-dots:nth-child(2) {
+    bottom: -200px;
+    left: 280px;
   }
 }
 /*# sourceMappingURL=main.css.map */
