--- a/css/main.scss
+++ b/css/main.scss
@@ -605,7 +605,8 @@ body {
 
   @media screen and (min-width: 600px) {
     .circle {
-      height: 270px !important;
+      height: 300px !important;
+      margin-bottom: 20px;
     }
   }
   @media screen and (min-width: 1080px) {
