--- a/css/main.css
+++ b/css/main.css
@@ -593,7 +593,8 @@ body {
 
 @media screen and (min-width: 600px) {
   .about .circle {
-    height: 270px !important;
+    height: 300px !important;
+    margin-bottom: 20px;
   }
 }
 
