--- a/css/main.css
+++ b/css/main.css
@@ -230,15 +230,16 @@ body {
   transition: 0.3s ease;
   position: absolute;
   border-radius: 50%;
-  right: 45px;
+  right: 0px;
+  top: 0px;
   z-index: 4;
 }
 
 .hero .nav-wrapper .mobile-nav-bg.open {
   width: 350px;
   height: 350px;
-  -webkit-transform: translate(42%, 12%);
-          transform: translate(42%, 12%);
+  -webkit-transform: translate(32%, -29%);
+          transform: translate(32%, -29%);
 }
 
 .hero .nav-wrapper .nav {
